# stinky

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
hoatzin-editor/: CMakeLists.txt
hoatzin-editor/assets/shaders/: basic.shader
hoatzin-editor/cmake/: FetchDependencies.cmake  Files.cmake  Variables.cmake
hoatzin-editor/src/: HoatzinApplication.cpp  HoatzinApplication.h  HoatzinEditorLayer.cpp  HoatzinEditorLayer.h  ImGuiLayer.cpp  ImGuiLayer.h
hoatzin-editor/src/event/: HoatzinEditorLayer.cpp  HoatzinEditorLayer.h
hoatzin-editor/src/imgui/platform/glfw/: ImGuiInitializer.cpp  ImGuiInitializer.h
hoatzin-editor/src/panels/: EntityInspectorPanel.cpp  EntityInspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ScenePanel.cpp  ScenePanel.h  Workspace.cpp  Workspace.h
hoatzin-editor/src/save/: SaveManager.cpp  SaveManager.h
hoatzin-editor/src/style/: HoatzinImGui.cpp  HoatzinImGui.h
src/: Logger.cpp  (+8 more)
stinky-engine/: CMakeLists.txt  Config.cmake.in
stinky-engine/cmake/: Files.cmake  Variables.cmake
stinky-engine/include/: Logger.h  Macros.h  StinkyLogger.h  StinkyMacros.h  StinkyPrerequisites.h  stinkypch.h
stinky-engine/include/application/: Application.h  EntryPoint.h
stinky-engine/include/camera/: OrthographicCamera.h  OrthographicCameraController.h  PerspectiveCamera.h  PerspectiveCameraController.h
stinky-engine/include/core/: StinkyMacros.h
stinky-engine/include/event/: ApplicationEvent.h  Event.h  EventController.h  KeyEvent.h  Layer.h  LayerStack.h  MouseEvent.h  Timestep.h
stinky-engine/include/gla/: GraphicLayerAbstractionFactory.h  IndexBuffer.h  RendererApi.h  Texture.h  VertexArray.h
stinky-engine/include/renderer/: FrameBuffer.h  IndexBuffer.h  OrthographicCamera.h  OrthographicCameraController.h  Renderer.h  Renderer2D.h  Renderer3D.h  RendererApi.h  RendererFactory.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
stinky-engine/include/window/: Window.h
stinky-engine/include/window/glfw/: PlatformIndependentWindow.h  WindowsWindow.h
stinky-engine/src/: Logger.cpp  StinkyLogger.cpp  StinkyPrerequisites.h  stinky_logger.cpp  stinky_prerequisites.h  stinkypch.h
stinky-engine/src/application/: Application.cpp  Application.h  EntryPoint.h  application.cpp  application.h  entry_point.h
stinky-engine/src/asset/: asset.h  asset_extensions.h  asset_manager.cpp  asset_manager.h  asset_metadata.h  asset_storage.cpp  asset_storage.h  asset_storage_factory.h  asset_types.h
stinky-engine/src/asset/entity/: material_asset.h  mesh_asset.h  scene_asset.h
stinky-engine/src/asset/handler/: asset_handler.cpp  asset_handler.h
stinky-engine/src/asset/mesh/: mesh_asset.cpp  mesh_asset.h  obj_mesh_asset.cpp  obj_mesh_asset.h
stinky-engine/src/asset/serializer/: mesh_serializer.h  obj_mesh_serializer.cpp  obj_mesh_serializer.h
stinky-engine/src/camera/: ArcballCamera.cpp  ArcballCamera.h  ArcballCameraController.cpp  ArcballCameraController.h  Camera.cpp  Camera.h  FPSCamera.cpp  FPSCamera.h  FPSCameraController.cpp  FPSCameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  TrackBallCamera.cpp  TrackBallCamera.h  camera.cpp  camera.h  fps_camera.cpp  fps_camera.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  perspective_camera_controller.cpp  perspective_camera_controller.h  track_ball_camera.cpp  track_ball_camera.h
stinky-engine/src/core/: KeyboardCodes.h  MouseCodes.h  StinkyLogger.h  StinkyMacros.h  StinkyMemory.h  ThreadUtils.cpp  ThreadUtils.h  Time.cpp  Time.h  job_scheduler.h  keyboard_codes.h  mouse_codes.h  project.cpp  project.h  shared_ptr.h  stinky_logger.cpp  stinky_logger.h  stinky_macros.h  stinky_memory.h  thread_utils.cpp  thread_utils.h  uuid.cpp  uuid.h
stinky-engine/src/ecs/: CameraComponent.cpp  CameraComponent.h  Entity.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponents.cpp  MeshComponents.h  ProgramComponent.cpp  ProgramComponent.h  TagComponent.h  TransformComponent.cpp  TransformComponent.h  TransformationComponents.cpp  TransformationComponents.h  camera_component.cpp  camera_component.h  entity.h  material_component.cpp  material_component.h  mesh_components.cpp  mesh_components.h  program_component.cpp  program_component.h  tag_component.h  transform_component.cpp  transform_component.h
stinky-engine/src/event/: ApplicationEvent.h  Event.h  EventController.cpp  EventController.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseEvent.h  Timestep.h  WindowsEvent.h  application_event.h  event.h  event_controller.h  key_event.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  mouse_event.h  windows_event.h
stinky-engine/src/gla/: CubeTexture.cpp  CubeTexture.h  FrameBuffer.h  GraphicLayerAbstractionFactory.cpp  GraphicLayerAbstractionFactory.h  IndexBuffer.h  RendererApi.h  Shader.h  VertexArray.h  VertexBuffer.h  cube_texture.cpp  cube_texture.h  frame_buffer.h  graphic_layer_abstraction_factory.cpp  graphic_layer_abstraction_factory.h  index_buffer.h  renderer_api.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h
stinky-engine/src/renderer/: OrthographicCamera.cpp  OrthographicCameraController.cpp  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer3D.cpp  RendererFactory.cpp  renderer.cpp  renderer.h
stinky-engine/src/scene/: Scene.cpp  Scene.h  scene.cpp  scene.h
stinky-engine/src/window/: Window.cpp  Window.h  window.cpp  window.h
stinky-engine/src/window/glfw/: PlatformIndependentWindow.cpp  PlatformIndependentWindow.h  WindowsWindow.cpp  platform_independent_window.cpp  platform_independent_window.h
stinky-sandbox/: CMakeLists.txt
stinky-sandbox/assets/shaders/: basic.shader  skybox.glsl
stinky-sandbox/include/: StinkyApplication.h  StinkyLayer.h
stinky-sandbox/resources/shaders/: basic.shader  skybox.glsl
stinky-sandbox/src/: StinkyApplication.cpp  StinkyLayer.cpp  main.cpp
(+74 files in other folders)
